src/objects/HVCR_Email_New__c.object
<CustomObject>
    <fields>
        <fullName>BCCAddressesLong__c</fullName>
        <label>BCC</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCCAddresses__c</fullName>
        <label>BCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyPlainText__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCAddressesLong__c</fullName>
        <label>CC</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCAddresses__c</fullName>
        <label>CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>HVCR_Case_New</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HVCR Contacts</relationshipLabel>
        <relationshipName>HVCR_Contact_New</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FromAddressLong__c</fullName>
        <label>From</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FromAddress__c</fullName>
        <label>From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDraft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRepliable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this email repliable?</inlineHelpText>
        <label>Repliable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_HVCR_Email_Id__c</fullName>
        <externalId>true</externalId>
        <label>Original HVCR Email Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyToAddressLong__c</fullName>
        <label>ReplyToAddress</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReplyToAddress__c</fullName>
        <label>ReplyToAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SentDate__c</fullName>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case Pending</fullName>
                </value>
                <value>
                    <fullName>Case Resolved</fullName>
                </value>
                <value>
                    <fullName>Case Unresolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToAddressesLong__c</fullName>
        <label>To</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ToAddresses__c</fullName>
        <label>To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HVCR Email New</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>FromAddressLong__c</columns>
        <columns>FromAddress__c</columns>
        <columns>Original_HVCR_Email_Id__c</columns>
        <columns>Subject__c</columns>
        <columns>ToAddressesLong__c</columns>
        <columns>ToAddresses__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>HVCR_Email_New_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HVCR Emails New</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>